# Breakout

./: .clang-format  .codespellrc  .gitignore  .suppressions.supp  Breakout.cpp  Breakout.h  Breakout.sln  Breakout.vcxproj  Breakout.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Game.h  HACKING.md  ImageResource.cpp  README.md  README_8md.html  Renderer.h  ResourceManager.cpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Utilities.h  Window.cpp  about.html  about_8dox.html  annotated.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespaces.html  pages.html  searchdata-v1.js  vcpkg.json
.github/workflows/: ci.yml
Src/Game/: Breakout.cpp  Breakout.h
Src/Main/: Main.cpp
Src/Renderer/: SpriteRenderer.cpp  SpriteRenderer.h
Src/Resource/: ResourceManager.cpp  ResourceManager.h
Src/Resource/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
Src/Resource/Texture/: ImageResource.h  Texture2D.cpp  Texture2D.h  stb_image.ixx
Src/Window/: Window.cpp  Window.h
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cmake/Modules/: FindirrKlang.cmake
shaders/: post_processing.vert
src/: ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  main.cpp  particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  power_up.h  resource_location.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sound_engine.cpp  sound_engine.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
test/: CMakeLists.txt
test/source/: Breakout_test.cpp
test/src/: Breakout_test.cpp
